Bug 154877 - Ctrl-A does not select frame text when document contains hidden paragraph
Summary: Ctrl-A does not select frame text when document contains hidden paragraph
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.5.2.2 release
Hardware: All All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:7.6.0 target:7.5.4
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Selection
  Show dependency treegraph
 
Reported: 2023-04-18 07:24 UTC by Gabor Kelemen (Collabora)
Modified: 2023-11-20 19:32 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file with frame and fields (15.14 KB, application/vnd.oasis.opendocument.text)
2023-04-18 07:24 UTC, Gabor Kelemen (Collabora)
Details
The example file fixed (15.23 KB, application/vnd.oasis.opendocument.text)
2023-04-18 07:24 UTC, Gabor Kelemen (Collabora)
Details
Result of CTRL-A in the first file - document text is selected (114.58 KB, image/png)
2023-04-18 07:25 UTC, Gabor Kelemen (Collabora)
Details
Result of CTRL-A in the second file - frame text is selected (118.48 KB, image/png)
2023-04-18 07:25 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2023-04-18 07:24:16 UTC
Created attachment 186751 [details]
Example file with frame and fields

Attached document contains a frame, a hidden paragraph field and a text field without value set.

Clicing into the frame and pressing Ctrl-A does not select the frames text but the documents text. If the text field has a value, then it works correctly and the frames text is selected (see second attachment).

1. Open attached file
2. Select View - Field Names
3. Click into the frame with lorem ipsum
4. Press Ctrl-A
-> The documents text is selected insted of the lorem ipsum.

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 60bce1af8aab2115d603781193bb659b35d1aedb
CPU threads: 8; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: hu-HU (hu_HU.UTF-8); UI: en-US
Calc: default

Bibisected to:
https://git.libreoffice.org/core/+/0590cd2857f68f48b8847071a9c1a7dbef135721%5E%21

author	Michael Stahl <michael.stahl@allotropia.de>	Fri Jan 27 16:06:08 2023 +0100
committer	Thorsten Behrens <thorsten.behrens@allotropia.de>	Thu Feb 09 13:43:19 2023 +0000

tdf#114973 sw: enable SelectAll with hidden para at start/end
Comment 1 Gabor Kelemen (Collabora) 2023-04-18 07:24:37 UTC
Created attachment 186752 [details]
The example file fixed
Comment 2 Gabor Kelemen (Collabora) 2023-04-18 07:25:21 UTC
Created attachment 186753 [details]
Result of CTRL-A in the first file - document text is selected
Comment 3 Gabor Kelemen (Collabora) 2023-04-18 07:25:42 UTC
Created attachment 186754 [details]
Result of CTRL-A in the second file - frame text is selected
Comment 4 Commit Notification 2023-05-09 08:35:16 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d81379db730a163c5ff75d4f3a3cddbd7b5eddda

tdf#154877 sw: generalise ExtendedSelectAll()

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2023-05-15 20:16:11 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/ad03ed5106499f74b38da28489a9352ce3f01d1a

tdf#154877 sw: generalise ExtendedSelectAll()

It will be available in 7.5.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.