sw/source/core/edit/edglss.cxx
@@ -197,7 +197,9 @@ bool SwEditShell::CopySelToDoc( SwDoc& rInsDoc )
         bool bColSel = GetCursor_()->IsColumnSelection();
         if( bColSel && rInsDoc.IsClipBoard() )
             rInsDoc.SetColumnSelection( true );
-        bool bSelectAll = StartsWith_() != SwCursorShell::StartsWith::None && ExtendedSelectedAll();
+        SwNode const*const pSelectAllStart(StartsWith_() != SwCursorShell::StartsWith::None
+            ? ExtendedSelectedAll()
+            : nullptr);
         {
             for(SwPaM& rPaM : GetCursor()->GetRingContainer())
             {
@@ -221,24 +223,12 @@ bool SwEditShell::CopySelToDoc( SwDoc& rInsDoc )
                     // for the purpose of copying, our shell cursor is not touched.
                     // (Otherwise we would have to restore it.)
                     SwPaM aPaM(*rPaM.GetMark(), *rPaM.GetPoint());
-                    if (bSelectAll)
+                    if (pSelectAllStart)
                     {
                         // Selection starts at the first para of the first cell,
                         // but we want to copy the table and the start node before
                         // the first cell as well.
-                        // tdf#133982 tables can be nested
-                        const SwNode* pNode = &aPaM.Start()->GetNode();
-                        while (SwTableNode const* pTableNode =
-                            pNode->StartOfSectionNode()->FindTableNode())
-                        {
-                            pNode = pTableNode;
-                        }
-                        while (SwSectionNode const* pSectionNode =
-                            pNode->StartOfSectionNode()->FindSectionNode())
-                        {
-                            pNode = pSectionNode;
-                        }
-                        aPaM.Start()->Assign(*pNode);
+                        aPaM.Start()->Assign(*pSelectAllStart);
                     }
                     bRet = GetDoc()->getIDocumentContentOperations().CopyRange( aPaM, aPos, SwCopyFlags::CheckPosInFly)
                         || bRet;
