sw/qa/extras/uiwriter/uiwriter.cxx
@@ -7891,6 +7891,7 @@ CPPUNIT_TEST_FIXTURE(SwUiWriterTest, testTdf133982)
     lcl_dispatchCommand(mxComponent, ".uno:SelectAll", {});
     lcl_dispatchCommand(mxComponent, ".uno:SelectAll", {});
     lcl_dispatchCommand(mxComponent, ".uno:SelectAll", {});
+    lcl_dispatchCommand(mxComponent, ".uno:SelectAll", {});
 
     //Without the fix in place, it would have crashed here
     lcl_dispatchCommand(mxComponent, ".uno:Cut", {});
@@ -7950,10 +7951,12 @@ CPPUNIT_TEST_FIXTURE(SwUiWriterTest, testTdf114973)
 {
     SwDoc* const pDoc = createDoc("tdf114973.fodt");
 
+    SwWrtShell* const pWrtShell = pDoc->GetDocShell()->GetWrtShell();
+    pWrtShell->SttEndDoc(true);
+
     lcl_dispatchCommand(mxComponent, ".uno:SelectAll", {});
     Scheduler::ProcessEventsToIdle();
 
-    SwWrtShell* const pWrtShell = pDoc->GetDocShell()->GetWrtShell();
     // bug: cursor jumped into header
     CPPUNIT_ASSERT(!pWrtShell->IsInHeaderFooter());
 
